momentuHMM 1.2.1 2017-10-20
-----------------
CHANGES

* bug fix in MIpool when initial distribution includes covariates


momentuHMM 1.2.0 2017-10-19
-----------------
NEW FEATURES

* Regression formulas can now be specified for the initial distributions of HMMs using the formulaDelta argument in fitHMM, MIfitHMM, and simData. These changes are backwards compatible with previous versions, but note that the number and order of arguments has been changed in fitHMM, MIfitHMM, and simData.

Changes

* If step length is zero at time t or t+1, simData and prepData now return NA for turning angle at time step t 

* bug fix in pseudoRes such that pseudo-residuals now "reset" for each individual

* bug fix in fitHMM when using fixPar to fix initial distribution (delta)

* bug fix in fitHMM when nbStates=1 and circularAngleMean=TRUE

* bug fix in fitHMM when nbStates=1 and retryFits>0


momentuHMM 1.1.1 2017-09-19
-----------------
NEW FEATURES

* Normal (Gaussian) and Bernoulli distributions can now be specified for data streams

* Harbour seal example of McClintock et al (2013) added to vignette

Changes

* added pseudoRes continuity adjustment for discrete distributions


momentuHMM 1.1.0 2017-08-15
-----------------
NEW FEATURES

* fixPar argument in fitHMM and MIfitHMM now specified on the same scale as the initial parameters (Par0, beta0, and delta0 arguments)

* Factor-level covariates (e.g. 'sexM', `sexF') can now be included in pseudo design matrix DM arguments of fitHMM, MIfitHMM, and simData

* obsPerAnimal argument in simData can now be specified as a list indicating the number of observations for each individual

CHANGES

* vignette now built using knitr

* bug fix in crawlWrap when predTimes argument includes times that are before the time of first observation

* bug fix in plot.miSum calculation of natural scale parameters when cons and/or workcons MIfitHMM arguments are used


momentuHMM 1.0.1 2017-07-17
-----------------
NEW FEATURES
