@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.2.1
-Date: 2017-10-20
+Date: 2017-10-26
 Depends:
     R (>= 2.10), splines, splines2
 Author: Brett McClintock, Theo Michelot
